# hack4change-ekoludki

./: .gitignore  README.md  package-lock.json  package.json
front_4_web/: .gitignore  package-lock.json  package.json
front_4_web/public/: index.html
front_4_web/src/: App.tsx  index.tsx
front_4_web/src/modules/common/components/: Button.style.ts  Button.tsx
front_4_web/src/modules/common/components/Navigation/Bottom/: NavigationBottom.styled.ts  NavigationBottom.tsx
front_4_web/src/modules/common/components/Navigation/Top/: NavigationTop.styled.ts  NavigationTop.tsx
front_4_web/src/modules/common/components/styles/: Button.style.ts
front_4_web/src/modules/common/styles/: GlobalStyles.ts
front_4_web/src/modules/dashboard/components/: Content.tsx  Footer.tsx  MainViewer.tsx  Navbar.tsx  NavigationBottom.tsx  NavigationTop.styled.ts  NavigationTop.tsx
front_4_web/src/modules/dashboard/components/styles/: NavigationBottom.style.ts
front_4_web/src/modules/details/components/: Map.tsx
front_4_web/src/modules/details/components/Main/: Main.styled.ts  Main.tsx
front_4_web/src/modules/repository/types/: our_types.d.ts
front_4_web/src/modules/repository/utils/: Fetch.ts
services/: SERVICES.md  pyproject.toml
services/core/: database.py  main.py  models.py  repository.py  schemas.py  security.py
views/: VIEWS.md
