[tool.poetry]
name = "services"
version = "0.1.0"
description = "Backend services for team 'Ekoludki' app (hack4change 2023)"
authors = ["Ekoludki"]
license = "Proprietary"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.2"
boto3 = "^1.26.145"
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
